헤더메인 스타일추가

--- a/eunjeong.html
+++ b/eunjeong.html
@@ -47,7 +47,7 @@
         <div>soge</div>
         <div>picture</div>
       </div>
-      <div>
+      <div class="footer">
         <div>ins</div>
         <div>you</div>
         <div>twit</div>
