메인 내 div 수정

--- a/eunjeong.html
+++ b/eunjeong.html
@@ -29,8 +29,26 @@
       }
       .main {
         width: 100vw;
-        height: 70vh;
+        height: 60vh;
         background-color: #d9d9d9;
+        display: flex;
+        justify-content: space-around;
+        align-items: start;
+      }
+      .main > div:nth-child(1) {
+        width: 30vw;
+        height: 30vw;
+        background-color: plum;
+      }
+      .main > div:nth-child(2) {
+        width: 30vw;
+        height: 30vw;
+        background-color: aliceblue;
+      }
+      .main > div:nth-child(3) {
+        width: 30vw;
+        height: 30vw;
+        background-color: aliceblue;
       }
     </style>
   </head>
