--- a/eunjeong.html
+++ b/eunjeong.html
@@ -29,7 +29,7 @@
       }
       .main {
         width: 100vw;
-        height: 60vh;
+        height: 65vh;
         background-color: #d9d9d9;
         display: flex;
         justify-content: space-around;
@@ -49,6 +49,19 @@
         width: 30vw;
         height: 30vw;
         background-color: aliceblue;
+      }
+      .footer {
+        width: 100vw;
+        height: 10vw;
+        background-color: aliceblue;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
+      .footer > div {
+        width: 20vw;
+        height: 5vw;
+        background-color: pink;
       }
     </style>
   </head>
