클릭시 푸바오사라짐

--- a/project/project.html
+++ b/project/project.html
@@ -86,6 +86,7 @@
           fubao.style.top = ySting + "px";
 
           fubao.addEventListener("click", function () {
+            fubao.remove();
             let hander = true;
             if (hander === true) {
               score.value = count++;
