푸바오 아닌 경우를 추가

--- a/project/project.html
+++ b/project/project.html
@@ -77,6 +77,11 @@
           fubao.classList.add("fubao");
           fubao.style.position = "absolute";
 
+          let nofubao = document.createElement("div");
+          maindiv.appendChild("nofubao");
+          nofubao.className.add("nofubao");
+          nofubao.style.position = "absolute";
+
           console.log(Math.round(Math.random() * 10) * 60);
           let x = Math.floor(Math.random() * 10) * 60;
           let y = Math.floor(Math.random() * 10) * 60;
