--- a/project/project.html
+++ b/project/project.html
@@ -85,13 +85,15 @@
           nofubao.classList.add("nofubao");
           nofubao.style.position = "absolute";
 
-          console.log(Math.round(Math.random() * 10) * 60);
           let x = Math.floor(Math.random() * 10) * 60;
           let y = Math.floor(Math.random() * 10) * 60;
           let xString = x.toString();
           let ySting = y.toString();
           fubao.style.left = xString + "px";
           fubao.style.top = ySting + "px";
+
+          nofubao.style.left = xString + "px";
+          nofubao.style.top = ySting + "px";
 
           let hander = true;
           fubao.addEventListener("click", function () {
