타임밸류추가

--- a/project/project.html
+++ b/project/project.html
@@ -75,6 +75,7 @@
       let time = document.getElementById("time");
       let count = 1;
       let maindiv = root.children[0];
+      let timeValue = 10;
 
       btn.addEventListener("click", function () {
         let game = setInterval(() => {
