--- a/project/project.html
+++ b/project/project.html
@@ -75,9 +75,19 @@
       let time = document.getElementById("time");
       let count = 1;
       let maindiv = root.children[0];
-      let timeValue = 10;
+      let timeValue = 20;
 
+      function timer() {
+        let stop = setInterval(function () {
+          if (timeValue <= 0) {
+            clearInterval(stop);
+          }
+          time.value = timeValue;
+          timeValue = timeValue - 1;
+        }, 1000);
+      }
       btn.addEventListener("click", function () {
+        timer();
         let game = setInterval(() => {
           let fubao = document.createElement("div");
           maindiv.appendChild(fubao);
@@ -96,8 +106,8 @@
           fubao.style.left = xString + "px";
           fubao.style.top = ySting + "px";
 
-          nofubao.style.left = xString + "px";
-          nofubao.style.top = ySting + "px";
+          nofubao.style.right = xString + "px";
+          nofubao.style.bottom = ySting + "px";
 
           let hander = true;
           fubao.addEventListener("click", function () {
@@ -113,6 +123,18 @@
               score.value = count--;
             }
           });
+
+          if (timeValue <= 0) {
+            clearInterval(game);
+            root.style.width = "100vw";
+            root.style.height = "100vh";
+            root.style.backdropFilter = "blur(5px)";
+            root.style.top = "0px";
+            root.textContent = "당신의 점수는 " + score.value + "점 입니다!";
+            root.style.fontSize = "4vw";
+            root.style.fontWeight = "900";
+            root.style.textAlign = "center";
+          }
         }, 1000);
       });
     </script>
