간단한 룰추가

--- a/project/project.html
+++ b/project/project.html
@@ -60,6 +60,7 @@
     <div id="root">
       <div></div>
       <div>
+        <p>푸바오가 아닐시 점수가 깎이니 조심하세요!</p>
         <p>남은시간!</p>
         <input type="text" id="time" value="20" />
         <p>점수</p>
