--- a/project/project.html
+++ b/project/project.html
@@ -41,18 +41,21 @@
         text-align: center;
       }
       .fubao {
-        background-image: url(/스크린샷\ 2023-10-10\ 오후\ 4.21.19.png);
-        width: 100px;
-        height: 100px;
+        background-image: url(/스크린샷\ 2023-10-10\ 오후\ 5.40.00.png);
+        width: 110px;
+        height: 110px;
         border-radius: 50%;
         background-position: center;
       }
       .nofubao {
-        background-image: url(/스크린샷\ 2023-10-10\ 오후\ 5.18.28.png);
-        width: 100px;
-        height: 100px;
+        background-image: url(/스크린샷\ 2023-10-10\ 오후\ 5.41.07.png);
+        width: 110px;
+        height: 110px;
         border-radius: 50%;
         background-position: center;
+      }
+      #btn:active {
+        background-color: black;
       }
     </style>
   </head>
@@ -75,6 +78,7 @@
       let score = document.getElementById("score");
       let time = document.getElementById("time");
       let count = 1;
+      let miunscount = 0;
       let maindiv = root.children[0];
       let timeValue = 20;
 
@@ -121,10 +125,9 @@
           nofubao.addEventListener("click", function () {
             nofubao.remove();
             if (hander === true) {
-              score.value = count--;
+              score.value = miunscount--;
             }
           });
-
           if (timeValue <= 0) {
             clearInterval(game);
             root.style.width = "100vw";
