--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -11,8 +11,17 @@
         display: flex;
         flex-direction: column;
         /* justify-content: center; */
-        /* align-items: center; */
+        align-items: center;
         background-color: antiquewhite;
+      }
+      #button {
+        width: 10vw;
+        height: 5vw;
+      }
+      #root > div:nth-child(2) {
+        width: 50vw;
+        height: 50vh;
+        background-color: azure;
       }
     </style>
   </head>
