--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -10,7 +10,7 @@
         height: 100vh;
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
+        justify-content: center;
         align-items: center;
         background-color: antiquewhite;
       }
@@ -19,9 +19,27 @@
         height: 5vw;
       }
       #root > div:nth-child(2) {
+        width: 70vw;
+        height: 50vh;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+      }
+      #root > div:nth-child(3) {
         width: 50vw;
         height: 50vh;
-        background-color: azure;
+      }
+      #root > div:nth-child(2) > div:nth-child(1) {
+        width: 10vw;
+        height: 5vw;
+        background-color: burlywood;
+        border: 1px solid black;
+      }
+      #root > div:nth-child(2) > div:nth-child(2) {
+        width: 50vw;
+        height: 5vw;
+        background-color: white;
+        border: 1px solid black;
       }
     </style>
   </head>
