--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -25,10 +25,6 @@
         justify-content: start;
         align-items: center;
       }
-      #root > div:nth-child(3) {
-        width: 50vw;
-        height: 50vh;
-      }
       #root > div:nth-child(2) > div:nth-child(1) {
         width: 10vw;
         height: 5vw;
@@ -40,6 +36,15 @@
         height: 5vw;
         background-color: white;
         border: 1px solid black;
+      }
+      #root > div:nth-child(3) {
+        width: 50vw;
+        height: 50vh;
+      }
+      #root > div:nth-child(3) > div {
+        width: 40vw;
+        height: 40vh;
+        background-color: black;
       }
     </style>
   </head>
