--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -18,30 +18,30 @@
         width: 10vw;
         height: 5vw;
       }
-      #root > div:nth-child(2) {
+      .ciga {
         width: 70vw;
         height: 50vh;
         display: flex;
         justify-content: start;
         align-items: center;
       }
-      #root > div:nth-child(2) > div:nth-child(1) {
+      .clga > div:nth-child(1) {
         width: 10vw;
         height: 5vw;
         background-color: burlywood;
         border: 1px solid black;
       }
-      #root > div:nth-child(2) > div:nth-child(2) {
+      .ciga > div:nth-child(2) {
         width: 50vw;
         height: 5vw;
         background-color: white;
         border: 1px solid black;
       }
-      #root > div:nth-child(3) {
+      .lung {
         width: 50vw;
         height: 50vh;
       }
-      #root > div:nth-child(3) > div {
+      .lung > div {
         width: 40vw;
         height: 40vh;
         background-color: black;
@@ -51,14 +51,18 @@
   <body>
     <div id="root">
       <button id="button">click</button>
-      <div>
+      <div class="ciga">
         <div></div>
         <div></div>
       </div>
-      <div>
+      <div class="lung">
         <div></div>
       </div>
     </div>
-    <script></script>
+    <script>
+      let button = document.getElementById("button");
+      let ciga = document.getElementsByClassName("ciga");
+      let lung = document.getElementsByClassName("lung");
+    </script>
   </body>
 </html>
