--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -27,8 +27,8 @@
         position: relative;
       }
       .ciga > div:nth-child(1) {
-        width: 20vw;
-        height: 5vw;
+        width: 290px;
+        height: 70px;
         background-color: burlywood;
         border: 1px solid black;
       }
@@ -79,10 +79,10 @@
       count = 10;
 
       let smoking = setInterval(() => {
-        button.addEventListener("mousedown", () => {
+        button.addEventListener("click", () => {
           ciga[0].children[2].style.width = `${500 - count++}px`;
         });
-      }, 500);
+      }, 1000);
     </script>
   </body>
 </html>
