--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+      integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <style>
       #root {
         width: 100vw;
@@ -50,13 +57,8 @@
         width: 50vw;
         height: 50vh;
         display: flex;
-        position: relative;
-      }
-      .lung > div:nth-child(1) {
-        width: 400px;
-        height: 400px;
-        background-image: url(/pngwing.com.png);
-        background-size: cover;
+        justify-content: center;
+        align-items: center;
       }
     </style>
   </head>
@@ -69,23 +71,27 @@
         <div></div>
       </div>
       <div class="lung">
-        <div></div>
-        <div>
-          <div></div>
-        </div>
+        <i class="fa-solid fa-lungs fa-2xl"></i>
       </div>
     </div>
     <script>
       let button = document.getElementById("button");
       let ciga = document.getElementsByClassName("ciga");
       let lung = document.getElementsByClassName("lung");
-      console.dir(ciga[0].children[1]);
-
+      let lungs = lung[0].children[0];
+      console.dir(lungs);
+      let smoke = ciga[0].children[2];
+      console.dir(smoke);
       count = 20;
 
       let smoking = setInterval(() => {
         button.addEventListener("click", () => {
           ciga[0].children[2].style.width = `${500 - count++}px`;
+          if (smoke === "0px") {
+            lungs.style.backgroundImage = "url(/lungs-solid\ \(1\).svg)";
+            lungs.style.width = "400px";
+            lungs.style.height = "400px";
+          }
         });
       }, 1000);
     </script>
