폐그림 크기조절완료

--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -71,7 +71,10 @@
         <div></div>
       </div>
       <div class="lung">
-        <i class="fa-solid fa-lungs fa-2xl"></i>
+        <i
+          class="fa-solid fa-lungs"
+          style="color: #f57070; font-size: 400px"
+        ></i>
       </div>
     </div>
     <script>
