--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -83,17 +83,13 @@
       let lung = document.getElementsByClassName("lung");
       let lungs = lung[0].children[0];
       console.dir(lungs);
-      let smoke = ciga[0].children[2];
-      console.dir(smoke);
-      count = 20;
+      count = 100;
 
       let smoking = setInterval(() => {
         button.addEventListener("click", () => {
           ciga[0].children[2].style.width = `${500 - count++}px`;
-          if (smoke === "0px") {
-            lungs.style.backgroundImage = "url(/lungs-solid\ \(1\).svg)";
-            lungs.style.width = "400px";
-            lungs.style.height = "400px";
+          if (ciga[0].children[2].style.width === "0px") {
+            lungs.style.color = "black";
           }
         });
       }, 1000);
