--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -99,13 +99,14 @@
             root.style.height = "100vh";
             root.style.backdropFilter = "blur(5px)";
             root.style.top = "0px";
-            root.textContent = "담배는 몸에 좋지 않아요 🙅‍♀️";
+            root.textContent = "담배는 몸에 좋지 않아요 🙅‍♀️ 자제합시당";
             root.style.fontSize = "4vw";
             root.style.fontWeight = "900";
             root.style.textAlign = "center";
           }
         });
       }, 1000);
+      //test
     </script>
   </body>
 </html>
