--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -103,7 +103,7 @@
             root.style.fontSize = "4vw";
             root.style.fontWeight = "900";
             root.style.textAlign = "center";
-            //test
+            //test.
           }
         });
       }, 1000);
