--- a/smoking/smoking.html
+++ b/smoking/smoking.html
@@ -50,7 +50,7 @@
         background-color: white;
         border: 1px solid black;
         position: absolute;
-        top: 140px;
+        top: 110px;
         left: 290px;
       }
       .lung {
@@ -71,38 +71,35 @@
         <div></div>
       </div>
       <div class="lung">
-        <i
-          class="fa-solid fa-lungs"
-          style="color: #f57070; font-size: 400px"
-        ></i>
+        <i class="fa-solid fa-lungs" style="color: #f57070; font-size: 400px"></i>
       </div>
     </div>
     <script>
-      let button = document.getElementById("button");
-      let ciga = document.getElementsByClassName("ciga");
-      let lung = document.getElementsByClassName("lung");
+      let button = document.getElementById('button');
+      let ciga = document.getElementsByClassName('ciga');
+      let lung = document.getElementsByClassName('lung');
       let lungs = lung[0].children[0];
       console.dir(lungs);
       count = 100;
 
       let smoking = setInterval(() => {
-        button.addEventListener("click", () => {
+        button.addEventListener('click', () => {
           ciga[0].children[2].style.width = `${500 - count++}px`;
-          if (ciga[0].children[2].style.width <= "10px") {
+          if (ciga[0].children[2].style.width <= '10px') {
             clearInterval(smoking);
-            lungs.style.color = "black";
+            lungs.style.color = 'black';
           }
           const cigaWidth = ciga[0].children[2].style.width;
-          if (cigaWidth === "0px") {
-            console.log("q");
-            root.style.width = "100vw";
-            root.style.height = "100vh";
-            root.style.backdropFilter = "blur(5px)";
-            root.style.top = "0px";
-            root.textContent = "담배는 몸에 좋지 않아요 🙅‍♀️ 자제합시당";
-            root.style.fontSize = "4vw";
-            root.style.fontWeight = "900";
-            root.style.textAlign = "center";
+          if (cigaWidth === '0px') {
+            console.log('q');
+            root.style.width = '100vw';
+            root.style.height = '100vh';
+            root.style.backdropFilter = 'blur(5px)';
+            root.style.top = '0px';
+            root.textContent = '담배는 몸에 좋지 않아요 🙅‍♀️ 자제합시당';
+            root.style.fontSize = '4vw';
+            root.style.fontWeight = '900';
+            root.style.textAlign = 'center';
             //test.
           }
         });
