--- a/project/project.html
+++ b/project/project.html
@@ -42,14 +42,14 @@
         text-align: center;
       }
       .fubao {
-        background-image: url('스크린샷\ 2023-10-10\ 오후\ 5.40.00.png');
+        background-image: url('https://stellatalk.s3.ap-northeast-2.amazonaws.com/image/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA+2023-10-10+%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE+5.40.00.png');
         width: 130px;
         height: 130px;
         border-radius: 50%;
         background-position: center;
       }
       .nofubao {
-        background-image: url('./스크린샷\ 2023-10-10\ 오후\ 5.41.07.png');
+        background-image: url('https://stellatalk.s3.ap-northeast-2.amazonaws.com/image/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA+2023-10-10+%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE+5.41.07.png');
         width: 130px;
         height: 130px;
         border-radius: 50%;
